--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+input[type="text"], input[type="password"], input[type="email"] {
+    @apply w-full border my-1 px-3 rounded-2xl;
+}
+button{
+    @apply bg-gray-300;
+}
+/* button.primary{
+    @apply  background-color: #f87171;
+    
+} */
